# addressing-the-yan-report

./: README.md  index.html  pyproject.toml
.github/workflows/: marp-to-pages.yml
assets/bed/: genes_sars_cov_2_nc_045512.2.bed  genomic_ranges_patent_us7279327b2.bed  sars_cov_1_genes_for_diagram bed  sars_cov_2_genes_for_diagram.bed  sars_cov_2_ranges.bed
assets/fasta/: NC_045512.1.fasta
assets/html/: trial_1_the_yan_report.html  trial_2_martin_and_mercola.html
assets/markdown/: trial_1_the_yan_report.html  trial_1_the_yan_report.md  trial_2_martin_and_mercola.html  trial_2_martin_and_mercola.md  yan_et_al_analysis.md
docs/: trial_1_the_yan_report.html  trial_2_martin_and_mercola.html  yan_et_al_analysis.html
notebooks/: [Patent US7279327B2] vs [SARS CoV-2 strain NC_045512.2].ipynb
scripts/: __init__.py  config_the_analyses.py  config_the_analysis.py  run_martin_and_mercola_analysis.py  run_the_analysis.py  run_yan_et_al_analysis.py  yan_et_al_analysis.py
src/: main_page.py  probability_of_kmer_in_string.py
src/chart/: __init__.py  generate_ranges_for_chart.py  range_for_chart.py
src/constants/: __init__.py  analyses_config.py  analysis_config.py  colors.py  restriction_enzyme_locations.py  restriction_enzymes.py
src/dataclasses/: __init__.py  genomic_range.py  restriction_enzyme.py  sequence_occurrence.py
src/diagram/: __init__.py  build_genome_diagram.py  labeled_feature.py
src/genome_browser_overrides/: __init__.py  adjusted_ticks_diagram.py  default_ticks_diagram.py  diagram_row.py  labeled_feature.py  overridden_diagram.py  overridden_feature.py  overridden_genome_diagram.py
src/genomic_range_builders/: build_genomic_range.py  build_genomic_range_list.py
src/genomic_ranges/: __init__.py  build_genomic_range.py  genomic_range.py
src/indices/: __init__.py  (+3 more)
test/: conftest.py
(+55 files in other folders)
