[tool.poetry]
name = "us7279327b2-patent-detector"
version = "0.1.0"
description = "Detect RNA marks of 'Methods for producing recombinant coronavirus'"
authors = ["Anna Engel <anna.julia.engel@gmail.com>"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^1.9.0"
genome-browser = {git = "https://github.com/clintval/genome-browser.git", rev = "d073811"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
