[tool.poetry]
name = "us7279327b2-patent-detector"
version = "0.1.0"
description = "Detect RNA marks of 'Methods for producing recombinant coronavirus'"
authors = ["Anna Engel <anna.julia.engel@gmail.com>"]
license = "Proprietary"

[tool.poetry.dependencies]
genome-browser = {git = "https://github.com/engelanna/genome-browser.git", branch = "feature/specify-deps-with-poetry"}
numpy = "^1.22.3"
python = ">=3.8,<3.11"
streamlit = "^1.9.0"
matplotlib = "^3.5.2"
more-itertools = "^8.13.0"
scipy = "^1.8.0"
ipython = "^8.3.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
